--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -17,12 +17,12 @@ $form-text-disabled-color: core.$uq-neutral-dark20;
 $form-text-size: core.$font-size-m;
 
 // Select
-$form-select-icon: core.$uq-purple;
+$form-select-icon: core.$purple;
 $form-select-icon-disabled: $form-border-color;
 
 // Checkbox/Radio buttons
 $form-checkbox-border-radius: 4px;
 $form-checkbox-border-width: 1px;
-$form-checkbox-check-color: core.$uq-white;
+$form-checkbox-check-color: core.$white;
 $form-checkbox-size: 20px;
 $form-checkbox-check-size: 16px;
