--- a/packages/header-legacy/src/scss/_component.scss
+++ b/packages/header-legacy/src/scss/_component.scss
@@ -5,8 +5,8 @@
 @use "global" as *;
 
 .legacy-header {
-  background: core.$uq-purple;
-  background: core.$uq-purple-gradient;
+  background: core.$purple;
+  background: core.$purple-gradient;
   box-sizing: border-box;
   font-family: core.$font-body;
   font-weight: core.$font-weight-thin;
@@ -110,14 +110,14 @@
     }
 
     &-link {
-      color: core.$uq-white;
+      color: core.$white;
       font-size: core.$font-size-s;
       font-weight: core.$font-weight-thin;
       text-decoration: none;
 
       &:hover,
       &:focus {
-        color: core.$uq-white;
+        color: core.$white;
         text-decoration: underline;
       }
     }
@@ -171,7 +171,7 @@
           background-size: 100%;
           background-image: url(icon-constants.get-icon(
             "standard--search",
-            core.$uq-white
+            core.$white
           ));
         }
 
@@ -179,7 +179,7 @@
           &::before {
             background-image: url(icon-constants.get-icon(
               "standard--close",
-              core.$uq-white
+              core.$white
             ));
           }
         }
@@ -187,7 +187,7 @@
     }
 
     &-title {
-      color: core.$uq-white;
+      color: core.$white;
       font-family: core.$roboto;
       font-size: core.$font-size-m;
       font-style: italic;
@@ -214,7 +214,7 @@
     }
 
     input[type="radio"] {
-      color: core.$uq-white;
+      color: core.$white;
       border-radius: 50%;
       appearance: none;
       display: inline-block;
@@ -232,7 +232,7 @@
       }
 
       + label {
-        color: core.$uq-white;
+        color: core.$white;
         display: inline-block;
         font-size: core.$font-size-s;
         font-weight: core.$font-weight-normal;
@@ -248,11 +248,11 @@
 
       &:checked {
         border-width: 0.125rem;
-        border-color: core.$uq-white;
+        border-color: core.$white;
 
         &::after {
           border-radius: 50%;
-          background-color: core.$uq-white;
+          background-color: core.$white;
           content: "";
           display: block;
           position: absolute;
@@ -286,7 +286,7 @@
       max-width: 100%;
       min-width: 100%;
       border-radius: 2px;
-      background-color: core.$uq-white;
+      background-color: core.$white;
       background-position: 1rem;
       margin-bottom: core.$space-s;
 
@@ -317,10 +317,10 @@
 
       &-button {
         background-clip: padding-box;
-        background-color: core.$uq-white;
+        background-color: core.$white;
         border-radius: 5px;
         border: 2px solid transparent;
-        color: core.$uq-purple;
+        color: core.$purple;
         display: inline-block;
         font-size: core.$font-size-m;
         height: 2.75rem;
@@ -337,9 +337,9 @@
         width: 2.75rem;
 
         &:hover {
-          background-color: core.$uq-white;
-          border-color: core.$uq-purple;
-          color: core.$uq-purple;
+          background-color: core.$white;
+          border-color: core.$purple;
+          color: core.$purple;
         }
 
         &::before {
@@ -353,7 +353,7 @@
           background-size: 100%;
           background-image: url(icon-constants.get-icon(
             "standard--search",
-            core.$uq-purple
+            core.$purple
           ));
         }
       }
