--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -24,7 +24,7 @@ body {
     font-size: core-global.$font-size-xxxl !important;
     margin: 0 0 core-global.$space-s !important;
     font-weight: 500 !important;
-    color: core-global.$uq-purple !important;
+    color: core-global.$purple !important;
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   }
 
@@ -57,7 +57,7 @@ body {
     font-weight: 500 !important;
     padding-bottom: 0 !important;
     border-bottom: 0 !important;
-    color: core-global.$uq-purple !important;
+    color: core-global.$purple !important;
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   }
 
