--- a/packages/storybook-html/stories/components/blockquote/blockquote.scss
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.scss
@@ -10,9 +10,9 @@ section {
 }
   
 .background-light {
-    background-color: $uq-white;
+    background-color: $white;
 }
 .background-dark {
-    background-color: $uq-purple;
+    background-color: $purple;
 }
 */
