--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -84,58 +84,58 @@
 
 .uqds-colour--purple-300 {
   background-color: core.$purple-300;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--purple-400 {
   background-color: core.$purple-400;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--purple-500,
 .uqds-colour--purple {
-  background-color: core.$uq-purple;
-  color: core.$uq-white;
+  background-color: core.$purple;
+  color: core.$white;
 }
 
 .uqds-colour--purple-600 {
   background-color: core.$purple-600;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--purple-650 {
   background-color: core.$purple-650;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--purple-700 {
   background-color: core.$purple-700;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--purple-800 {
   background-color: core.$purple-800;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--purple-900 {
   background-color: core.$purple-900;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-text-color--purple {
-  color: core.$uq-purple;
+  color: core.$purple;
 }
 
 /* Black */
 .uqds-colour--black {
-  background-color: core.$uq-black;
+  background-color: core.$black;
   color: white;
 }
 
 /* White */
 .uqds-colour--white {
-  background-color: core.$uq-white;
+  background-color: core.$white;
   border: 1px solid #eeeeee;
 }
 
@@ -162,27 +162,27 @@
 
 .uqds-colour--grey-500 {
   background-color: core.$grey-500;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--grey-600 {
   background-color: core.$grey-600;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--grey-700 {
   background-color: core.$grey-700;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--grey-800 {
   background-color: core.$grey-800;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--grey-900 {
   background-color: core.$grey-900;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 /* Error */
@@ -200,37 +200,37 @@
 
 .uqds-colour--error-300 {
   background-color: core.$error-300;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--error-400 {
   background-color: core.$error-400;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--error-500 {
   background-color: core.$error-500;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--error-600 {
   background-color: core.$error-600;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--error-700 {
   background-color: core.$error-700;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--error-800 {
   background-color: core.$error-800;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--error-900 {
   background-color: core.$error-900;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 /* Success */
@@ -248,37 +248,37 @@
 
 .uqds-colour--success-300 {
   background-color: core.$success-300;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--success-400 {
   background-color: core.$success-400;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--success-500 {
   background-color: core.$success-500;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--success-600 {
   background-color: core.$success-600;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--success-700 {
   background-color: core.$success-700;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--success-800 {
   background-color: core.$success-800;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--success-900 {
   background-color: core.$success-900;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 /* Warning */
@@ -296,37 +296,37 @@
 
 .uqds-colour--warning-300 {
   background-color: core.$warning-300;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--warning-400 {
   background-color: core.$warning-400;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--warning-500 {
   background-color: core.$warning-500;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--warning-600 {
   background-color: core.$warning-600;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--warning-700 {
   background-color: core.$warning-700;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--warning-800 {
   background-color: core.$warning-800;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--warning-900 {
   background-color: core.$warning-900;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 /* Utility */
@@ -344,42 +344,42 @@
 
 .uqds-colour--utility-300 {
   background-color: core.$utility-300;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--utility-400 {
   background-color: core.$utility-400;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--utility-500 {
   background-color: core.$utility-500;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--utility-600 {
   background-color: core.$utility-600;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--utility-700 {
   background-color: core.$utility-700;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--utility-800 {
   background-color: core.$utility-800;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 .uqds-colour--utility-900 {
   background-color: core.$utility-900;
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 
 .uqds-text-color--white {
-  color: core.$uq-white;
+  color: core.$white;
 }
 
 
@@ -387,7 +387,7 @@
 
 /* UQ secondary palette */
 .uqds-colour--purple-light {
-  background-color: core.$uq-purple-light;
+  background-color: core.$purple-light;
 }
 
 .uqds-colour--neutral {
@@ -398,121 +398,31 @@
   background-color: core.$uq-darkgrey;
 }
 
-.uqds-colour--gold {
-  background-color: core.$uq-gold;
-}
+
 
 .uqds-colour--red {
-  background-color: core.$uq-red;
+  background-color: core.$red;
 }
 
-.uqds-colour--orange {
-  background-color: core.$uq-orange;
-}
 
 .uqds-colour--yellow {
-  background-color: core.$uq-yellow;
+  background-color: core.$yellow;
 }
 
 .uqds-colour--blue {
-  background-color: core.$uq-blue;
-}
-
-.uqds-colour--aqua {
-  background-color: core.$uq-aqua;
+  background-color: core.$blue;
 }
 
 .uqds-colour--green {
-  background-color: core.$uq-green;
+  background-color: core.$green;
 }
 
 /* UQ purple gradient */
 .uqds-purple-gradient {
-  background: core.$uq-purple-gradient;
+  background: core.$purple-gradient;
   color: white;
 }
 
-/* Neutral tints */
-.uqds-neutral-light20 {
-  background-color: core.$uq-neutral-light20;
-}
-
-.uqds-neutral-light40 {
-  background-color: core.$uq-neutral-light40;
-}
-
-.uqds-neutral-light60 {
-  background-color: core.$uq-neutral-light60;
-}
-
-.uqds-neutral-light80 {
-  background-color: core.$uq-neutral-light80;
-}
-
-/* Neutral shades */
-.uqds-neutral-dark20 {
-  background-color: core.$uq-neutral-dark20;
-}
-
-.uqds-neutral-dark40 {
-  background-color: core.$uq-neutral-dark40;
-}
-
-.uqds-text-color--grey {
-  color: core.$uq-neutral-dark40;
-}
-
-.uqds-neutral-dark60 {
-  background-color: core.$uq-neutral-dark60;
-}
-
-.uqds-neutral-dark80 {
-  background-color: core.$uq-neutral-dark80;
-}
-
-/* Darkgrey tints */
-.uqds-darkgrey-light20 {
-  background-color: core.$uq-darkgrey-light20;
-}
-
-.uqds-darkgrey-light40 {
-  background-color: core.$uq-darkgrey-light40;
-}
-
-.uqds-darkgrey-light60 {
-  background-color: core.$uq-darkgrey-light60;
-}
-
-.uqds-darkgrey-light80 {
-  background-color: core.$uq-darkgrey-light80;
-}
-
-/* Red shades */
-.uqds-red-dark10 {
-  background-color: core.$uq-red-dark10;
-}
-
-.uqds-red-dark20 {
-  background-color: core.$uq-red-dark20;
-}
-
-/* Green shades */
-.uqds-green-dark10 {
-  background-color: core.$uq-green-dark10;
-}
-
-/* Links */
-.uqds-link-color {
-  background-color: core.$link;
-}
-
-.uqds-link-active-color {
-  background-color: core.$link-active;
-}
-
-.uqds-link-hover-color {
-  background-color: core.$link-hover;
-}
 
 /* Text */
 .uqds-text-bgcolor {
