--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -13,7 +13,7 @@ $use-encapsulation: false !default;
 
 @mixin -body-styles {
   font-size: 100%;
-  background: core.$uq-white;
+  background: core.$white;
   margin: core.$space-none;
   padding: core.$space-none;
 }
@@ -37,11 +37,11 @@ $use-encapsulation: false !default;
 
   // Background colour utilities
   .white {
-    background-color: core.$uq-white;
+    background-color: core.$white;
   }
 
   .black {
-    background-color: core.$uq-black;
+    background-color: core.$black;
   }
 
   .link {
@@ -49,7 +49,7 @@ $use-encapsulation: false !default;
   }
 
   .purple {
-    background-color: core.$uq-purple;
+    background-color: core.$purple;
   }
 
   // Typography
@@ -61,7 +61,7 @@ $use-encapsulation: false !default;
   h6 {
     font-weight: core.$font-weight-bold;
     line-height: core.$line-height-h;
-    color: core.$uq-purple;
+    color: core.$purple;
   }
 
   h1 {
@@ -144,7 +144,7 @@ $use-encapsulation: false !default;
     margin-bottom: core.$space-none;
 
     dt {
-      color: core.$uq-purple;
+      color: core.$purple;
       font-size: core.$font-size-s;
       text-transform: uppercase;
       font-weight: core.$font-weight-bold;
@@ -172,23 +172,23 @@ $use-encapsulation: false !default;
   .text {
     // Text colour
     &--reverse {
-      color: core.$uq-white;
+      color: core.$white;
     }
 
     &--primary {
-      color: core.$uq-purple;
+      color: core.$purple;
     }
 
     &--purple-light {
-      color: core.$uq-purple-light;
+      color: core.$purple-light;
     }
 
     &--black {
-      color: core.$uq-black;
+      color: core.$black;
     }
 
     &--white {
-      color: core.$uq-white;
+      color: core.$white;
     }
 
     &--error {
@@ -266,7 +266,7 @@ $use-encapsulation: false !default;
     }
 
     &--shadow {
-      text-shadow: 0 4px 4px rgba(core.$uq-black, 0.4);
+      text-shadow: 0 4px 4px rgba(core.$black, 0.4);
     }
   }
 
