--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -11,7 +11,7 @@
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
   height: 100%;
-  background-color: core.$uq-white;
+  background-color: core.$white;
   border: 1px solid core.$grey-200;
   border-radius: core.$space-xs;
   color: core.$text;
@@ -111,7 +111,7 @@
     &-super {
       font-size: core.$font-size-s;
       font-weight: 500;
-      color: core.$uq-purple-light;
+      color: core.$purple-light;
       text-transform: uppercase;
       margin: core.$space-none core.$space-none core.$space-s;
 
