--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -47,7 +47,7 @@ html {
 
   &::before {
     @extend %tint-overlay;
-    background: $uq-black;
+    background: $black;
   }
 }
 
@@ -57,7 +57,7 @@ html {
 
   &::before {
     @extend %tint-overlay;
-    background: $uq-white;
+    background: $white;
   }
 }
 
