--- a/packages/loading-spinner/src/scss/_component.scss
+++ b/packages/loading-spinner/src/scss/_component.scss
@@ -2,7 +2,7 @@
 @use "global" as *;
 
 .uq-loading-spinner {
-  color: core.$uq-purple;
+  color: core.$purple;
   background-color: transparent;
   border-radius: 50%;
   height: core.$space-xxxl;
@@ -21,7 +21,7 @@
   &::before {
     background-color: transparent;
     border: core.$space-xs solid transparent;
-    border-top-color: core.$uq-purple;
+    border-top-color: core.$purple;
     border-radius: 50%;
     box-sizing: border-box;
     content: "";
@@ -36,10 +36,10 @@
   }
 
   &--light {
-    color: core.$uq-white;
+    color: core.$white;
 
     &::before {
-      border-top-color: core.$uq-white;
+      border-top-color: core.$white;
     }
   }
 
