--- a/packages/storybook-html/stories/components/icon/icon.scss
+++ b/packages/storybook-html/stories/components/icon/icon.scss
@@ -51,7 +51,7 @@
       background-size: 100%;
       background-image: url(icon-constants.get-icon(
         "agriculture-and-environment--agriculture-machine-tractor",
-        core.$uq-green
+        core.$green
       ));
     }
   }
